--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,7 @@ redis==5.0.1
 fire==0.5.0
 daphne==4.0.0
 logfire
-stripe==8.0.0 
+stripe==8.0.0
+openai==1.12.0
+django-crispy-forms==2.1
+crispy-bootstrap5==2024.2 
